# i3egg

./: .gitignore  CONTRIBUTING.md  README.md  egg.py  noxfile.py  requirements-test.txt  requirements.txt  setup.cfg  setup.py
i3egg/: __init__.py  egg.py
test/: test_egg.py
