[metadata]
name = i3egg
version = attr: i3egg.__version__
url = https://github.com/vaneseltine/i3egg
author = Matt VanEseltine
author_email = matvan@umich.edu
classifiers =
    Development Status :: 4 - Beta
    Environment :: Other Environment
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Topic :: Utilities
    Typing :: Typed
license = AGPL-3.0-or-later
license_file = LICENSE
description = An overly simple timer for i3.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    i3
    i3wm
project_urls =
    Issue Tracker = https://github.com/vaneseltine/i3egg/issues
python_requires = >=3.6

[options]
zip_safe = True

[coverage:run]
branch = True
source = i3egg
omit = */__*.py

[coverage:report]
exclude_lines =
    if T.TYPE_CHECKING

[coverage:html]
directory = build/coverage

[flake8]
max-line-length = 88
max-complexity = 9
exclude =
    .git,
    .nox,
    .venv,
    build,
    docs,
    test,
    __pycache__,
    __init__.py,
    *.pyi
ignore =
    E203,
    E501,
    W503

[isort]
# black handles line length, don't you worry about it isort
line_length=120

[tool:pytest]
log_cli = False
log_cli_level = DEBUG
testpaths = test
python_files = test_*.py
python_functions = t_* test_* issue*
